--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.9.1
 beautifulsoup4==4.12.2
 fastapi==0.108.0
 feedparser==6.0.11
+Jinja2==3.1.3
 pandas==2.1.4
 pyarrow==15.0.0
 uvicorn==0.25.0
