--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,6 @@ deps =
 
 commands =
 # NOTE: you can run any command line tool here - not just tests
-    mypy --ignore-missing-imports --check-untyped-defs microsearch
+    mypy --ignore-missing-imports --check-untyped-defs src
     mypy --ignore-missing-imports --check-untyped-defs tests
     python -m pytest
